2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/Employee_Review_Form__c.object-meta.xml
<CustomObject>
    <description>Employee Review Form</description>
    <label>Employee Review Form</label>
    <nameField>
        <displayFormat>EMP-{DD}-{MM}-{YYYY}-{0000}</displayFormat>
        <label>Employee Review Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Review Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>