2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Ability_to_Comm_with_Clients_Colleagu__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Comm_with_Clients_Colleagu__c</fullName>
    <description>Grading for the ability to communicate with clients and colleagues (especially on discrepancies/issues on-site).</description>
    <inlineHelpText>Grading for the ability to communicate with clients and colleagues (especially on discrepancies/issues on-site).</inlineHelpText>
    <label>Ability to Comm. with Clients &amp; Colleagu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>