2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Ability_to_communicate_with_clients__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_communicate_with_clients__c</fullName>
    <description>Ability to communicate with clients (and colleagues) on artwork viewing at the warehouse (unpack, hang, pack, etc. ) for grading</description>
    <inlineHelpText>Ability to communicate with clients (and colleagues) on artwork viewing at the warehouse (unpack, hang, pack, etc. )</inlineHelpText>
    <label>Ability to communicate with clients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>