2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Ability_to_Prepare_Return_Materials_To__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Prepare_Return_Materials_To__c</fullName>
    <description>Grading for Ability to Prepare and Return materials, tools, and equipment in a timely and orderly manner.</description>
    <inlineHelpText>Grading for Ability to Prepare and Return materials, tools, and equipment in a timely and orderly manner.</inlineHelpText>
    <label>Ability to Prepare &amp; Return Materials To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>