2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Ability_to_Understand_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Understand_Instructions__c</fullName>
    <description>Grading  for the ability to understand instructions</description>
    <inlineHelpText>Grading  for the ability to understand instructions</inlineHelpText>
    <label>Ability to Understand Instructions:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>