2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Art_Storage_Facility_floorplan_map__c.field-meta.xml
<CustomField>
    <fullName>Art_Storage_Facility_floorplan_map__c</fullName>
    <description>Art Storage Facility floorplan (map)</description>
    <inlineHelpText>Art Storage Facility floorplan (map)</inlineHelpText>
    <label>Art Storage Facility floorplan (map)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>