2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Artwork_safety__c.field-meta.xml
<CustomField>
    <fullName>Artwork_safety__c</fullName>
    <description>Artwork safety: 
Knowledge of handling packing/unpacking, crating/uncrating, fabrication of carton boxes to ensure that artwork is stored properly
Ability to work with warehouse team on the safe storage of the artworks</description>
    <inlineHelpText>Artwork safety: 
Knowledge of handling packing/unpacking, crating/uncrating, fabrication of carton boxes to ensure that artwork is stored properly
Ability to work with warehouse team on the safe storage of the artworks</inlineHelpText>
    <label>Artwork safety:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>