2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Asian_works_on_Paper_Crating_Carton__c.field-meta.xml
<CustomField>
    <fullName>Asian_works_on_Paper_Crating_Carton__c</fullName>
    <description>Supervisor comments for Asian works on Paper Crating / Carton.</description>
    <inlineHelpText>Supervisor comments for Asian works on Paper Crating / Carton.</inlineHelpText>
    <label>Asian works on Paper [Crating / Carton]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>