2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Assist_in_stock_take_and_cycle_count__c.field-meta.xml
<CustomField>
    <fullName>Assist_in_stock_take_and_cycle_count__c</fullName>
    <description>Assist in stock take and cycle count for grading</description>
    <inlineHelpText>Assist in stock take and cycle count</inlineHelpText>
    <label>Assist in stock take and cycle count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>