2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Assist_Registrar_with_Visual_check_Proce__c.field-meta.xml
<CustomField>
    <fullName>Assist_Registrar_with_Visual_check_Proce__c</fullName>
    <description>-Assist Registrar with Visual check Procedure (inclusive of photography skills) for grading</description>
    <inlineHelpText>Assist Registrar with Visual check Procedure (inclusive of photography skills)</inlineHelpText>
    <label>Assist Registrar with Visual check Proce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>