2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Category_1__c.field-meta.xml
<CustomField>
    <fullName>Category_1__c</fullName>
    <label>Category_1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Asst Manager</fullName>
            </value>
            <value>
                <fullName>&apos;Team Leader</fullName>
            </value>
            <value>
                <fullName>&apos;Operation Crew</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>