2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;CEO&apos;) , &apos;CEO&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;HOD&apos;) , &apos;HOD&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;GM&apos;) , &apos;GM&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Manager&apos;) , &apos;Manager&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Executive&apos;) , &apos;Executive&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Asst Manager&apos;) , &apos;Asst Manager&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Team Leader&apos;) , &apos;Team Leader&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Operation Crew&apos;) , &apos;Operation Crew&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Carpenter&apos;) , &apos;Carpenter&apos;,
IF( ISPICKVAL( Contact__r.Category_HT__c , &apos;Driver&apos;) , &apos;Driver&apos;,&apos;--None--&apos;
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>