2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Ceramics_Glass_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Ceramics_Glass_Visual_Check__c</fullName>
    <description>Ceramics &amp; Glass[Visual Check]</description>
    <inlineHelpText>Ceramics &amp; Glass[Visual Check]</inlineHelpText>
    <label>Ceramics &amp; Glass[Visual Check]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>