2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Art_Storage_Facility_floorplan_W__c.field-meta.xml
<CustomField>
    <fullName>Comment_Art_Storage_Facility_floorplan_W__c</fullName>
    <description>Comment Art Storage Facility floorplan</description>
    <inlineHelpText>Comment Art Storage Facility floorplan</inlineHelpText>
    <label>Comment Art Storage Facility floorplan</label>
    <type>TextArea</type>
</CustomField>