2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Artwork_safety__c.field-meta.xml
<CustomField>
    <fullName>Comment_Artwork_safety__c</fullName>
    <description>Comment for Artwork safety</description>
    <inlineHelpText>Comment for Artwork safety</inlineHelpText>
    <label>Comment Artwork safety</label>
    <type>TextArea</type>
</CustomField>