2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Asian_works_on_Paper_Visual_Chec__c.field-meta.xml
<CustomField>
    <fullName>Comment_Asian_works_on_Paper_Visual_Chec__c</fullName>
    <description>Comment Asian works on Paper[Visual Check]</description>
    <inlineHelpText>Comment Asian works on Paper[Visual Check]</inlineHelpText>
    <label>Comment Asian works on Paper[Visual Chec</label>
    <type>TextArea</type>
</CustomField>