2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_assist_in_stock_take_and_cycle_c__c.field-meta.xml
<CustomField>
    <fullName>Comment_assist_in_stock_take_and_cycle_c__c</fullName>
    <description>Comment assist in stock take and cycle count</description>
    <inlineHelpText>Create/assign barcode for all incoming artworks and crate</inlineHelpText>
    <label>Comment assist in stock take and cycle c</label>
    <type>TextArea</type>
</CustomField>