2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Assist_Registrar_with_Visual_che__c.field-meta.xml
<CustomField>
    <fullName>Comment_Assist_Registrar_with_Visual_che__c</fullName>
    <description>Comment Assist Registrar with Visual check Procedure</description>
    <inlineHelpText>Comment Assist Registrar with Visual check Procedure</inlineHelpText>
    <label>Comment Assist Registrar with Visual chk</label>
    <type>TextArea</type>
</CustomField>