2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Compliance_Safety_regulation__c.field-meta.xml
<CustomField>
    <fullName>Comment_Compliance_Safety_regulation__c</fullName>
    <description>Comment Compliance: Safety regulation &amp; SOP</description>
    <inlineHelpText>Comment Compliance: Safety regulation and SOP</inlineHelpText>
    <label>Comment Compliance: Safety regulation &amp;</label>
    <type>TextArea</type>
</CustomField>