2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_create_assign_barcode_for_all_ar__c.field-meta.xml
<CustomField>
    <fullName>Comment_create_assign_barcode_for_all_ar__c</fullName>
    <description>Create / assign barcode for all incoming artworks and crate</description>
    <inlineHelpText>Create / assign barcode for all incoming artworks and crate</inlineHelpText>
    <label>Comment create/assign barcode for all ar</label>
    <type>TextArea</type>
</CustomField>