2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Data_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Data_Management__c</fullName>
    <description>Comment Data Management</description>
    <inlineHelpText>Comment for Data Management</inlineHelpText>
    <label>Comment Data Management</label>
    <type>TextArea</type>
</CustomField>