2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Comment_Documentation__c</fullName>
    <description>Comment Documentation:</description>
    <inlineHelpText>Comment Documentation:</inlineHelpText>
    <label>Comment Documentation:</label>
    <type>TextArea</type>
</CustomField>